--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionNotesSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionNotesSection.razor
@@ -16,7 +16,7 @@
                         <a class="anchor" id="@CreateAnchor(NotePointList[NoteList.IndexOf(elem)],NoteList.IndexOf(elem))"></a>
                         <RadzenRow JustifyContent="@justifyContent" AlignItems="@alignItems" Gap="0">
                             <RadzenColumn Size="1" class="rz-text-align-center paddingYResponsive">
-                                <RadzenText TextStyle="TextStyle.H6">@NotePointList[NoteList.IndexOf(elem)]</RadzenText>
+                                <RadzenText TextStyle="TextStyle.Body1"><strong>@NotePointList[NoteList.IndexOf(elem)]</strong></RadzenText>
                             </RadzenColumn>
                             <RadzenColumn>
                                 <div class="paddingYResponsive">
