--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -87,7 +87,7 @@
                                                     <RadzenSplitButtonItem Text="Documenti" Value="2" Icon="folder" />
                                                 </ChildContent>
                                             </RadzenSplitButton>
-                                            <InputFile OnChange="@(args => LoadFile(args, question))" style="display: none;" id="pictureLoader" />
+                                            <InputFile OnChange="@((args) => LoadFile(args))" style="display: none;" id="pictureLoader" />
                                         </div>
                                     </div>
                                 }
@@ -117,6 +117,8 @@
 
     ScreenComponent? screenComponent;
 
+    DocumentQuestionModel? currentQuestion;
+
 
 
     protected override async Task OnParametersSetAsync()
@@ -144,12 +146,13 @@
             }
             else
             {
+                currentQuestion = question;
                 await CameraService.OpenDocuments();
             }
         }
     }
 
-    private async Task LoadFile(InputFileChangeEventArgs e, DocumentQuestionModel question)
+    private async Task LoadFile(InputFileChangeEventArgs e)
     {
         var readStream = e.File.OpenReadStream(2048000);
 
@@ -161,12 +164,14 @@
 
         var img = "data:image/jpeg;charset=utf-8;base64," + base64Image;
 
-        question.Attachments.Add(new AttachmentModel()
+        currentQuestion!.Attachments.Add(new AttachmentModel()
             {
                 Name = "",
                 Date = DateTime.Now,
                 Image = img,
             });
+
+        currentQuestion = null;
 
         await StateChangeNotification();
     }
