--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -21,7 +21,7 @@ else
         <ActivityTopBar @ref="@topBar" OnButtonSaveClicked="SaveDocument" DocumentNavigator="@documenNavigator"
                         OnButtonPreviewClicked="@VisualizzaAnteprimaDocumento" ShowPreview="true" />
         <ReportConstructorSiteDataSection Document="@document" DocumentNavigator="@documenNavigator" />
-        <CompaniesPresentSection Companies="@document.Companies" DocumentNavigator="@documenNavigator" />
+        <CompaniesPresentSection Document="@document" Companies="@document.Companies" DocumentNavigator="@documenNavigator" />
         <QuestionsSection Categories="document.Categories" Companies="document.Companies" OnStateChangeNotification="@UpdateDocument"
                           DocumentNavigator="@documenNavigator" />
         <QuestionNotesSection Document="@document" DocumentNavigator="@documenNavigator" />
