fix visualizzazione dialog

--- a/AppMAUI/Components/Routes.razor
+++ b/AppMAUI/Components/Routes.razor
@@ -11,7 +11,9 @@
                     <FocusOnNavigate RouteData="@routeData" Selector="h1" />
                 </Authorized>
                 <NotAuthorized>
-                    <LoginPage />
+                    <LayoutView Layout="@typeof(EmptyLayout)">
+                        <LoginPage />
+                    </LayoutView>
                 </NotAuthorized>
             </AuthorizeView>
         </Found>
