--- a/ConstructionSiteLibrary/Components/Users/UserInfo.razor
+++ b/ConstructionSiteLibrary/Components/Users/UserInfo.razor
@@ -1,4 +1,5 @@
-﻿@using Shared.Organizations
+﻿@using Shared.Documents
+@using Shared.Organizations
 @using ConstructionSiteLibrary.Interfaces
 @using ConstructionSiteLibrary.Components.Generics
 @using Microsoft.AspNetCore.Components.Forms
@@ -16,9 +17,9 @@
                 <RadzenButton Icon="add_a_photo" Click="@ToggleDropdown" class="buttonOptions" />
                 <div id="myDropdown" class="dropdown-content @DropdownCssClass()">
                     <RadzenButton Icon="photo_camera" Text="Fotocamera" Variant="Variant.Text" class="buttonEdit"
-                        @onmousedown="@OpenCamera" />
+                    @onmousedown="@OpenCamera" />
                     <RadzenButton Icon="folder" Text="Archivio" class="buttonDelete" Variant="Variant.Text"
-                        @onmousedown="@OpenDocuments" />
+                    @onmousedown="@OpenDocuments" />
                 </div>
             </div>
         </div>
@@ -98,8 +99,8 @@
     {
         @* if (firstRender)
         { *@
-            module = await JS.InvokeAsync<IJSObjectReference>("import", "./_content/ConstructionSiteLibrary/dragndrop.js");
-            //await module.InvokeVoidAsync("loadCanvas", canvasId);
+        module = await JS.InvokeAsync<IJSObjectReference>("import", "./_content/ConstructionSiteLibrary/dragndrop.js");
+        //await module.InvokeVoidAsync("loadCanvas", canvasId);
         @* } *@
     }
 
