modifica nome campi + aggiunto settings da template

--- a/ConstructionSiteLibrary/Components/ConstructorSites/CardInfoConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/CardInfoConstructorSite.razor
@@ -50,7 +50,7 @@
     [Parameter]
     public EventCallback ReloadInfo { get; set; }
     [Parameter]
-    public ConstructorSiteModel ConstructorSite { get; set; } = new();
+    public SiteModel ConstructorSite { get; set; } = new();
 
     ScreenComponent? screenComponent;
 
