--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
@@ -95,7 +95,7 @@ else
     [Parameter]
     public int SiteId { get; set; }
 
-    ConstructorSiteModel site = new();
+    SiteModel site = new();
 
     private List<DocumentModel> documents = [];
     private List<DocumentModel> displayedDocuments = [];
