--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
@@ -40,8 +40,8 @@ else
 @code {
     ScreenComponent? screenComponent;
 
-    private List<ConstructorSiteModel> sites = [];
-    private List<ConstructorSiteModel> displayedSites = [];
+    private List<SiteModel> sites = [];
+    private List<SiteModel> displayedSites = [];
     private bool onLoading = false;
     private string search = "";
     private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} cantieri)";
