--- a/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
@@ -71,10 +71,10 @@ else
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Inizio lavori:" Component="InizioLavori" />
-                    <RadzenDatePicker @bind-Value=@Document.ConstructorSite.StartDate ShowTime="true" DateFormat="dd/MM/yyyy h:mm" Name="InizioLavori" class="w-100 inputBorder">
+                    <RadzenDatePicker @bind-Value=@Document.Site.StartDate ShowTime="true" DateFormat="dd/MM/yyyy h:mm" Name="InizioLavori" class="w-100 inputBorder">
                         <FooterTemplate>
                             <RadzenButton Click=@(args =>
-                                      Document.ConstructorSite.StartDate = DateTime.Now) Text="Ora"
+                                      Document.Site.StartDate = DateTime.Now) Text="Ora"
                                           class="my-3 w-100" />
                         </FooterTemplate>
                     </RadzenDatePicker>
@@ -82,32 +82,32 @@ else
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Indirizzo cantiere:" Component="IndirizzoCantiere" />
                     <RadzenTextArea Placeholder="Inserisci l'indirizzo del cantiere" Name="IndirizzoCantiere"
-                                    class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.Address />
+                                    class="w-100 inputBorder" @bind-Value=@Document.Site.Address />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Lavori di:" Component="LavoriDi" />
                     <RadzenTextArea Placeholder="Inserisci il motivo dei lavori" Name="LavoriDi"
-                                    class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.JobDescription />
+                                    class="w-100 inputBorder" @bind-Value=@Document.Site.JobDescription />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Notifica preliminare inizio cantiere:" Component="NotificaPreliminareInizio" />
                     <RadzenDatePicker ShowTime=false DateFormat="dd/MM/yyyy" Name="NotificaPreliminareInizio"
-                                      class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationStartDate />
+                                      class="w-100 inputBorder" @bind-Value=@Document.Site.PreliminaryNotificationStartDate />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Id. SICO:" Component="IdSICOInizio" />
                     <RadzenTextBox Placeholder="Inserisci Id. SICO" Name="IdSICOInizio"
-                                   class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.IdSico />
+                                   class="w-100 inputBorder" @bind-Value=@Document.Site.IdSico />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Notifica preliminare in corso:" Component="NotificaPreliminareInCorso" />
                     <RadzenDatePicker ShowTime=false DateFormat="dd/MM/yyyy" Name="NotificaPreliminareInCorso"
-                                      class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.PreliminaryNotificationInProgress />
+                                      class="w-100 inputBorder" @bind-Value=@Document.Site.PreliminaryNotificationInProgress />
                 </div>
                 <div class="col-12 col-md-6">
                     <RadzenLabel Text="Id. SICO:" Component="IdSICOInCorso" />
                     <RadzenTextBox Placeholder="Inserisci Id. SICO" Name="IdSICOInCorso"
-                                   class="w-100 inputBorder" @bind-Value=@Document.ConstructorSite.IdSicoInProgress />
+                                   class="w-100 inputBorder" @bind-Value=@Document.Site.IdSicoInProgress />
                 </div>
             </div>
         </fieldset>
