--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -62,31 +62,31 @@ else
                             <RadzenText>Committente: <strong>@DocumentUtils.PrintDocumentField("")</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Lavori di: <strong>@DocumentUtils.PrintDocumentField(Document?.ConstructorSite.JobDescription)</strong></RadzenText>
+                            <RadzenText>Lavori di: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.JobDescription)</strong></RadzenText>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <RadzenText>Indirizzo cantiere: <strong>@DocumentUtils.PrintDocumentField(Document?.ConstructorSite.Address)</strong></RadzenText>
+                            <RadzenText>Indirizzo cantiere: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.Address)</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Inizio lavori: <strong>@StampaData(Document?.ConstructorSite.StartDate)</strong></RadzenText>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <RadzenText>Notifica preliminare inizio cantiere del: <strong>@StampaData(Document?.ConstructorSite.PreliminaryNotificationStartDate)</strong></RadzenText>
-                        </div>
-                        <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.ConstructorSite.IdSico)</strong></RadzenText>
+                            <RadzenText>Inizio lavori: <strong>@StampaData(Document?.Site.StartDate)</strong></RadzenText>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <RadzenText> Notifica preliminare in corso: <strong>@StampaData(Document?.ConstructorSite.PreliminaryNotificationInProgress)</strong></RadzenText>
+                            <RadzenText>Notifica preliminare inizio cantiere del: <strong>@StampaData(Document?.Site.PreliminaryNotificationStartDate)</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.ConstructorSite.IdSicoInProgress)</strong></RadzenText>
+                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.IdSico)</strong></RadzenText>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <RadzenText> Notifica preliminare in corso: <strong>@StampaData(Document?.Site.PreliminaryNotificationInProgress)</strong></RadzenText>
+                        </div>
+                        <div class="col">
+                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.IdSicoInProgress)</strong></RadzenText>
                         </div>
                     </div>
                 </div>
@@ -573,7 +573,7 @@ else
             String documentString = Document.Title;
             String compilatorString = Document.CSE ?? "";
             String committenteString = Document.Client?.Name ?? "";
-            String indirizzoCantiereString = Document.ConstructorSite.Address ?? "";
+            String indirizzoCantiereString = Document.Site.Address ?? "";
 
 
             // Generate and download the PDF
